# BattleTank

./: CMakeLists.txt  TankBattle.sln
Assets/: enemies.txt
Assets/maps/: common.txt  map1.txt
TankBattle/: AITank.cpp  AITank.h  BaseUnit.cpp  BaseUnit.h  Bullet.cpp  Bullet.h  GameWorld.cpp  GameWorld.h  IMovable.cpp  IMovable.h  Logger.cpp  Logger.h  Main.cpp  Map.cpp  Map.h  PlayerTank.cpp  PlayerTank.h  TankBattle.vcxproj  TankBattle.vcxproj.filters  helper.h
